--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- Add your site or application content here -->
   
 
-  <i class="icofont-facebook"></i>
+  <i class="icofont-facebook"></i>facebook
 
 
 
